# JITCalculator

./: .gitignore  CMakeLists.txt  README.md
exp/: CMakeLists.txt  Calculator.cpp  Calculator.hpp  Codegen.cpp  Codegen.hpp  Interpreter.cpp  Interpreter.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Runtime.cpp  Runtime.hpp  SymbolTable.cpp  SymbolTable.hpp  Token.cpp  Token.hpp  Visitor.h  ast.cpp  ast.hpp  bc.cpp  bc.hpp  jc.h  jcCollection.cpp  jcVariable.cpp  jcVariable.hpp  main.cpp
exp.xcodeproj/: project.pbxproj
exp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
exp/Common/: jc.h  jcArray.cpp  jcArray.hpp  jcClosure.cpp  jcClosure.hpp  jcCollection.cpp  jcCollection.h  jcCollection.hpp  jcList.cpp  jcList.hpp  jcString.cpp  jcString.hpp  jcUtils.hpp  jcVariable.cpp  jcVariable.hpp
exp/Frontend/: Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp
exp/bytecode/: Interpreter.cpp  Interpreter.hpp  Runtime.cpp  Runtime.hpp  bc.cpp  bc.hpp
exp/lib/: builtin.cpp  builtin.hpp
lib/: std.jc
test/: main.c  program
units/: jcUnits.mm  units.mm  utils.h
units/tests/: add.jc  closure.jc  list.jc  qs.jc  qs_cpy.jc  string.jc
